--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.galaxy"
-        minSdkVersion 21
+        minSdkVersion 16
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -32,7 +32,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation 'com.github.SheHuan:NiceImageView:1.0.5'
-    implementation 'com.twotoasters.jazzylistview:library:1.2.1'
-    implementation'com.twotoasters.jazzylistview:library-recyclerview:1.2.1'
+//    implementation 'com.github.SheHuan:NiceImageView:1.0.5'
+//    implementation 'com.twotoasters.jazzylistview:library:1.2.1'
+//    implementation'com.twotoasters.jazzylistview:library-recyclerview:1.2.1'
 }
