--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-//    implementation 'com.github.SheHuan:NiceImageView:1.0.5'
-//    implementation 'com.twotoasters.jazzylistview:library:1.2.1'
-//    implementation'com.twotoasters.jazzylistview:library-recyclerview:1.2.1'
+    implementation 'com.github.SheHuan:NiceImageView:1.0.5'
+    implementation 'com.twotoasters.jazzylistview:library:1.2.1'
+    implementation'com.twotoasters.jazzylistview:library-recyclerview:1.2.1'
 }
